# tools-impact-engine-orchestrator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  MOCK_IMPLEMENTATION.md  README.md  REVIEW_ARCHITECTURE.md  REVIEW_CODE.md  config.yaml  pyproject.toml
.claude/skills/: review-docs
.github/workflows/: ci.yaml  docs.yml
docs/source/: conf.py  design.md  index.md
docs/source/_static/: custom.css
docs/source/api/: index.md
docs/source/architecture/: index.md
docs/source/development/: index.md
docs/source/ecosystem/: index.md
docs/source/impact-loop/: config.yaml  index.md  run_once.py  setup_data.py
docs/source/impact-loop/configs/: allocate.yaml  checkout-flow-optimization.yaml  evaluate.yaml  measure.yaml  (+4 more)
docs/source/pipeline/: allocate.md  contracts.md  evaluate.md  index.md  measure.md  scale-and-report.md
docs/source/strategy/: index.md
docs/source/tutorial/: index.md
impact_engine_orchestrator/: __init__.py  config.py  orchestrator.py  registry.py
impact_engine_orchestrator/components/: __init__.py  base.py
impact_engine_orchestrator/components/allocate/: __init__.py  mock.py
impact_engine_orchestrator/components/evaluate/: __init__.py  mock.py
impact_engine_orchestrator/components/measure/: __init__.py  measure.py  mock.py
impact_engine_orchestrator/contracts/: __init__.py  allocate.py  evaluate.py  measure.py  report.py  types.py
notebooks/: impact_engine_loop.ipynb
scripts/: run_once.py
tests/: __init__.py  conftest.py  test_registry.py
tests/integration/: test_mock_pipeline.py  test_real_allocate_pipeline.py
(+6 files in other folders)
