[project]
name = "impact-engine-orchestrator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "portfolio-allocation @ git+https://github.com/eisenhauerIO/tools-impact-engine-allocate.git",
    "impact-engine @ git+https://github.com/eisenhauerIO/tools-impact-engine-measure.git",
]

[project.optional-dependencies]
dev = ["pytest", "nbmake", "nbconvert", "jupyter", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["impact_engine_orchestrator"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "pypandoc",
    "ipykernel",
    "nbconvert",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"

[tool.ruff]
extend-exclude = ["_external", "docs/build"]
line-length = 120

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D", "E402", "F", "I"]
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.pytest.ini_options]
addopts = "-v --nbmake"
testpaths = ["tests", "docs/source/tutorial"]
